**5.5.5** * Added 1.20.5-1.20.6 support * Added the "/warps resetlikes <warp>" and "/warps resetlikes" commands to clear like/dislikes for all or a single warp. * The "hyperdrive.admin.resetlikes" permission was added. * Added Lands support. * Warp icons now save serialized itemstacks allowing for head metadata, custom items, and more * The like/dislike system was revised allowing player to redact their vote and vote again. * Warp sorting is handled differently now. Warps are now sorted by like ratio (regardless). * When ratios are identical, traffic, then names will be prioritized in that order. * New messages will be added automatically to the "lang.yml". * Fixed issue involving player heads missing textures.
Signed-off-by: XZot1K <alexosborne54@gmail.com>

--- a/pom.xml
+++ b/pom.xml
@@ -137,7 +137,7 @@
         <dependency>
             <groupId>org.spigotmc</groupId>
             <artifactId>spigot-api</artifactId>
-            <version>1.20.4-R0.1-SNAPSHOT</version>
+            <version>1.20.6-R0.1-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
@@ -167,7 +167,7 @@
         <dependency>
             <groupId>com.sk89q.worldedit</groupId>
             <artifactId>worldedit-bukkit</artifactId>
-            <version>7.2.0-SNAPSHOT</version>
+            <version>7.4.0-SNAPSHOT</version>
             <scope>provided</scope>
             <exclusions>
                 <exclusion>
@@ -179,7 +179,7 @@
         <dependency>
             <groupId>com.sk89q.worldedit</groupId>
             <artifactId>worldedit-core</artifactId>
-            <version>7.2.17-SNAPSHOT</version>
+            <version>7.4.0-SNAPSHOT</version>
             <scope>provided</scope>
             <exclusions>
                 <exclusion>
@@ -191,7 +191,19 @@
         <dependency>
             <groupId>com.sk89q.worldguard</groupId>
             <artifactId>worldguard-bukkit</artifactId>
-            <version>7.0.9-SNAPSHOT</version>
+            <version>7.1.0-SNAPSHOT</version>
+            <scope>provided</scope>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.bstats</groupId>
+                    <artifactId>bstats-bukkit</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>com.sk89q.worldguard</groupId>
+            <artifactId>worldguard-core</artifactId>
+            <version>7.1.0-SNAPSHOT</version>
             <scope>provided</scope>
             <exclusions>
                 <exclusion>
