--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -84,7 +84,7 @@ filter-section:
   # Strings within the global filter will be remove from warp names, descriptions, and other similar textual features. (Case sensitive)
   # (Note: Phrases can be implemented into this list as well. The list can also be changed to a vertical format like
   # other lists in the configuration.)
-  global-filter: [ "fuck", "shit", "cunt", "fag", "faggot", "bitch", "dick", "damn", "www.", ".com", ".net" ]
+  global-filter: [ "fuck", "shit", "cunt", "fag", "faggot", "bitch", "dick", "damn", "www.", ".com" ]
   # Materials in this list will be avoided while a player is undergoing teleportation. If any of these material are encountered, the teleportation will return NOT SAFE.
   # (NOTE: The material name can be generalized, for example, the value "leaves" will detect all materials that have that value in their name)
   # This format is what needs to be followed to coordinate specific data values: <material>:<durability>
